--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
 html {
 	min-height: calc(100% + env(safe-area-inset-top, 0));
+	padding-right: env(safe-area-inset-right, 0);
+	padding-left: env(safe-area-inset-left, 0);
 }
